# nndlexp

./: .gitignore  pyproject.toml
exp1/: 1手写数字识别实验.ipynb
exp2/: 2图像语义分割实验.ipynb  2图像语义分割实验_PyTorch.ipynb  2图像语义分割实验_pytorch.py  2图像语义分割实验_数据准备.py  README.md  run_pytorch_download.py  run_pytorch_evaluate.py  run_pytorch_experiment.py  run_pytorch_predict.py  run_pytorch_train.py  图像语义分割实验.ipynb
exp2/outputs/logging_smoke_predict/: prediction_manifest_20260403_101834.json
exp2/pytorch_segmentation/: README.md  __init__.py  config.py  dataset.py  download.py  engine.py  evaluate.py  metrics.py  model.py  predict.py  train.py  transforms.py  utils.py
exp3/: 机器翻译实验_pytorch.ipynb  机器翻译实验_pytorch.py
exp3/ReferenceCode/: eval.py  main.ipynb  train.py
exp3/ReferenceCode/src/: config.py  dataset.py  loss.py  preprocess.py  seq2seq.py
exp4/: README.md  __init__.py  download_cifar10.py  evaluate.py  main.py  train.py  vit_cifar10_experiment.ipynb  实验要求.md
exp4/models/: __init__.py  cnn.py  vit.py
exp4/utils/: __init__.py  cifar10_download.py  data.py  metrics.py  plot.py
exp5/: download_prepare_irstd.py  mshnet_irstd_reproduction.ipynb  mshnet_irstd_reproduction.py
